charts/sock-shop/network-policies/allow-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend
  namespace: prod
spec:
  podSelector:
    matchLabels:
      name: orders
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: front-end
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: user
    - podSelector:
        matchLabels:
          name: payment
    - podSelector:
        matchLabels:
          name: shipping
    - podSelector:
        matchLabels:
          name: queue-master
    - podSelector:
        matchLabels:
          name: orders-db
    ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 27017
