charts/sock-shop/network-policies/allow-carts.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-carts
  namespace: prod
spec:
  podSelector:
    matchLabels:
      name: carts
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: front-end
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: carts-db
    ports:
    - protocol: TCP
      port: 27017
