charts/sock-shop/network-policies/allow-catalogue.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-catalogue
  namespace: prod
spec:
  podSelector:
    matchLabels:
      name: catalogue
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: front-end
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: catalogue-db
    ports:
    - protocol: TCP
      port: 3306
