charts/sock-shop/network-policies/allow-front-end.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-front-end
  namespace: prod
spec:
  podSelector:
    matchLabels:
      name: front-end
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: orders
    - podSelector:
        matchLabels:
          name: carts
    - podSelector:
        matchLabels:
          name: catalogue
    - podSelector:
        matchLabels:
          name: user
    ports:
    - protocol: TCP
      port: 8080
