charts/sock-shop/network-policies/allow-queue.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-queue
  namespace: prod
spec:
  podSelector:
    matchLabels:
      name: queue-master
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: orders
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: rabbitmq
    ports:
    - protocol: TCP
      port: 5672
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rabbitmq
  namespace: prod
spec:
  podSelector:
    matchLabels:
      name: rabbitmq
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: queue-master
    ports:
    - protocol: TCP
      port: 5672
