charts/sock-shop/network-policies/allow-user.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-user
  namespace: prod
spec:
  podSelector:
    matchLabels:
      name: user
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: front-end
    - podSelector:
        matchLabels:
          name: orders
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: user-db
    ports:
    - protocol: TCP
      port: 27017
